# python-uv-template

./: LICENSE  README.md  pyproject.toml
src/myapp/: __init__.py  __main__.py  settings.py
