[project]
name = "myapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rodney Rodriguez", email = "me@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "pydantic-settings>=2.7.1",
]

[project.scripts]
myapp = "myapp.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# pytorch-cu124 isn't needed but its here for convenience if using pytorch on Windows
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
default = false

[tool.uv.sources]
myapp = { workspace = true }

[dependency-groups]
dev = [
    "myapp",
    "pytest-cov>=6.0.0",
]
